Big findbugs cleanup